# agave-vision-api

./: .dockerignore  .gitignore  CLAUDE.md  FIXES_APPLIED.md  HANDOFF_CHECKLIST.md  MODEL_CONFIGURATION.md  PROJECT_LINEAGE_MAP.md  README.md  agave-ingest  agave-train  diagnose_roi.py  preview_cameras.sh  pyproject.toml  requirements.txt  run_demo.sh  select_roi.sh  setup_all_rois.sh  test_phase1_alerts.sh  test_single_camera.sh  test_synthetic_alerts.sh
_archive/: README.md
_archive/docs/: labeling_instructions.md  plan.md  smart_tile_selection.md  system_architecture.md
_archive/examples/: realtime_yolo_stream.py
_archive/production/: Dockerfile.inference-api  Dockerfile.stream-manager  docker-compose.yml
configs/: README.md  alerting.yaml  cameras.example.yaml  cameras.yaml  display.yaml  model.yaml  rois.example.yaml  rois.yaml  services.example.yaml  services.yaml  yolo_data.yaml
data/tiles_round1/: classes.txt  notes.json
demo/: README.md  alert_log_20260107_140442.json  interactive_demo.py  run_demo.sh
docs/: ml_api_reference.md  ml_enhancements_roadmap.md  phase1_validation_checklist.md  phase2_complete.md  project_notes.md  roi_setup_guide.md  synthetic_object_testing.md  system_architecture.md
examples/: README.md  integration_example.py  live_demo.py  roi_selector.py  test_alerts_with_synthetic_objects.py
ingestion/: README.md
models/: README.md
production/: Dockerfile.alert-router  docker-compose.yml
scripts/: build_yolo_dataset.py  clean_tiles.py  demo_video_infer.py  extract_frames.py  generate_tiles.py  infer_alert.py  split_rounds_from_clean.py  standardize_round_filenames.py  train_yolo_pina_detector.py
src/agave_vision/: README.md  __init__.py  ml_api.py
tests/: conftest.py
training/: README.md  cli.py
(+457 files in other folders)
